--- a/main/website/static/style.css
+++ b/main/website/static/style.css
@@ -1,9 +1,30 @@
 #title {
     text-align: center;
-    color:gray;
+    color:#d6d6d6;
+}
+
+.Header {
+    background-color: #2c2c2c;
 }
 
 .Server-Life {
     color: black;
     text-align: left;
+}
+
+button {
+    border: none;
+    text-align: center;
+    background-color: whitesmoke;
+    color: white;
+    padding: 12px 32px;
+}
+
+header h1 {
+    margin: 0;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
 }
